fixed spacing/margin in locations pages

--- a/artwebsite/src/LocationsStudio.css
+++ b/artwebsite/src/LocationsStudio.css
@@ -145,14 +145,15 @@
  margin-bottom: 70px;
  margin-left: 90px;
  margin-right: 60px;
+ margin-top: 100px;
 }
 
-.refer-a-friend-title-text h2{
+.refer-a-friend-title-texts h2{
  font-size: 25px;
  margin-top: 130px;
 }
 
-.refer-a-friend-content-text p{
+.refer-a-friend-content-texts p{
  font-size: 18px;
  margin-top: 30px;
 
@@ -171,6 +172,11 @@
 
 @media (max-width: 1024px) {
 
+  .top-content{
+    margin-left: 30px;
+    margin-right:30px;
+  }
+
   .schedule-boxes {
     flex-direction: column;
   }
@@ -186,10 +192,10 @@
    margin-right: 0px;
  }
 
- .refer-a-friend-title-text, .refer-a-friend-content-text{
+ .refer-a-friend-title-text, .refer-a-friend-content-texts{
    text-align: center;
-   margin-right:100px;
-   margin-left:100px;
+   margin-right:30px;
+   margin-left:30px;
  }
 
  .refer-a-friend-pic, .refer-a-friend-photo {
